@@ -1,4 +1,4 @@
-name: test
+name: test linux
 
 on:
   push:
@@ -14,8 +14,6 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macOS-latest
-          #- windows-latest
         raku-version:
           - 'latest'
           - '2021.12'
@@ -27,14 +25,7 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-              sudo apt-get install -y libfribidi-dev
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-              brew update
-              brew install fribidi
-          else
-              echo "$RUNNER_OS not supported"
-          fi
+          sudo apt-get install -y libfribidi-dev
           zef install --/test App::Prove6
           zef --deps-only install .
       - name: Run Tests
