@@ -1,0 +1,36 @@
+name: test macos
+
+on:
+  push:
+    branches:
+      - '*'
+    tags-ignore:
+      - '*'
+  pull_request:
+
+jobs:
+  raku:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - macOS-latest
+          #- windows-latest
+        raku-version:
+          - 'latest'
+          - '2021.12'
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: Raku/setup-raku@v1
+        with:
+          raku-version: ${{ matrix.raku-version }}
+      - name: Install Dependencies
+        run: |
+          brew install fribidi
+          zef install --/test App::Prove6
+          zef --deps-only install .
+      - name: Run Tests
+        run: |
+          prove6 -I. t
+          zef install .
